# paperforge

./: .gitignore  README.md  TASK-bibtex-latex-escape.md  pyproject.toml
examples/: dois.txt
src/paperforge/: __init__.py  bibtex.py  cli.py  config.py  downloader.py  inputs.py  latex_safety.py  metadata.py  orchestrator.py  sourcing.py  utils.py
tests/: test_bibtex.py  test_cli.py  test_downloader.py  test_inputs.py  test_latex_safety.py  test_metadata.py  test_orchestrator.py  test_sourcing.py  test_utils.py
