[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "paperforge"
version = "0.1.0"
description = "Resolve DOIs to Open Access PDFs and download them in batch."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "requests>=2.28",
    "openpyxl>=3.1",
    # Sourcing: doi.org content negotiation (Crossref + DataCite + mEDRA). The
    # [bibtex] extra pulls bibtexparser>=2.0.0b7, used for structural test
    # assertions. The LaTeX-safety layer adds no dependency (html + re, stdlib).
    "habanero[bibtex]>=2.0",
]

[project.optional-dependencies]
dev = ["pytest>=7", "bibtexparser>=2.0.0b7"]

[project.scripts]
paperforge = "paperforge.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/paperforge"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
